2007-12-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Fix documentation for
	the ::captured-event signal. (#673)

2007-12-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Clarify the set_clip() method
	documentation, pointing out that the clip area origin is
	always the top-left corner of an actor.

2007-12-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-alpha.h:
	* clutter/clutter-event.h:
	* clutter/clutter-fixed.[ch]:
	* clutter/clutter-model.h:
	* clutter/clutter-shader.[ch]:
	* clutter/clutter-stage.c: Documentation fixes.

2007-12-15  Emmanuele Bassi <ebassi@openedhand.com>

	* clutter/clutter-model-default.c:
	(clutter_model_default_iter_next),
	(clutter_model_default_iter_prev): Do not instantiate a new
	iterator, and update the passed one instead, as we say we do
	in the documentation. This avoid leaking tons of iterators.

	* clutter/clutter-model.[ch]: Update the documentation.

	* tests/test-model.c: Prettify some output.

2007-12-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour.c:
	(clutter_knot_get_type): Use the I_() macro.

	* clutter/clutter-model.[ch]: Make ClutterModel and ClutterModelIter
	abstract classes; also, provide more virtual functions inside the
	ClutterModel vtable, to allow subclasses and language bindings to
	override the entire ClutterModel using other/native data types
	to store the rows.
	
	* clutter/clutter-model-default.[ch]: ClutterModelDefault is a
	default implementation of ClutterModel and ClutterModelIter using
	GSequence.

	* clutter/Makefile.am:
	* clutter/clutter.h: Build glue for ClutterModelDefault.

	* tests/test-model.c: Update for constructor changes.

	* tests/test-shader.c: Fix a typo.

2007-12-14  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gl/cogl-defines.h.in:
	* clutter/cogl/gles/cogl-defines.h:
	Add CLUTTER_COGL_HAS_GL/GLES defines
